--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^5.7.4",
     "recharts": "^2.3.2",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
